# felixmulder.github.io

./: .gitignore  CHANGELOG.md  CNAME  Gemfile  LICENSE  README.md  _config.yml  homepage.cabal  index.html  resume.html  talks.html  writing.html
_layouts/: default.html  post.html  presentation.html
_posts/: 2015-04-30-reimplementing-malloc.md  2016-10-11-welcome-to-jekyll.markdown  2016-10-14-dotty-errors.md
_sass/: main-theme.sass
css/: default.css  haskell-syntax.css  pdf.css  print.sass  resume.sass  slides-old.css  slides.css
js/: highlight.pack.js
old/: Gemfile  _config.yml  index.html
resume/: index.html
src/: Main.hs
talks/: 2016-10-17-Deconstructing-Dotty.html  2017-02-07-Thoughts-on-Scala-3.html  2017-02-26-Dotty-and-the-new-Scala-developer-experience.html  2017-04-04-Abstractions-in-Dotty.html  2017-05-31-Reconstructing-Scala.html  2017-09-20-Real-world-Dotty.html  2017-11-28-Programming-multicores-in-Scala.html  2018-05-04-Regaining-control.md  2019-06-14-Brave-new-world.md  2020-01-21-Haskell-at-Klarna.md  2020-01-21-Haskell-in-Production.md
templates/: article.html  navbar.html  root.html  slides.html  talks.html  writing.html
writing/: 2019-10-05-Designing-testable-components.md  2019-10-05-Haskell-in-Production.md  2019-10-05-Testing-your-components.md  2020-08-08-Revisiting-application-structure.md  2020-08-20-How-Stylish-Haskell-works.md  2020-08-25-Revisiting-application-structure.md  2022-03-07-Interviewing-as-a-Software-Engineer.md  2022-03-10-Interviewing-as-a-Software-Engineer.md  2022-03-12-Monorepos-done-right.md
(+94 files in other folders)
