cabal-version: 3.0

version:
  0.0.1
name:
  homepage
author:
  Felix Mulder
maintainer:
  felix.mulder@gmail.com
homepage:
  https://felixmulder.com
bug-reports:
  https://github.com/felixmulder/felixmulder.github.io/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
extra-source-files:
  README.md

common options
  default-language:
    Haskell2010
  ghc-options:
    -Wall -Werror -Wredundant-constraints -fhide-source-paths
  default-extensions:
    GeneralizedNewtypeDeriving
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns

executable homepage
  import:
    options
  main-is:
    Main.hs
  hs-source-dirs:
    src
  exposed-modules:
  build-depends:
    , base ^>= 4.12.0.0
    , hakyll ^>= 4.13.0.1
    , extra ^>= 1.6.18
    , pandoc ^>= 2.7.3
    , mtl ^>= 2.2.2
